# adk_tutorial

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  README.md  REQUIREMENTS.md  TRACING_AND_OBSERVABILITY.md  example.py  pyproject.toml  requirements.txt
adk_tutorial/: 01_hello_world.ipynb  02_multitool_agent.ipynb  03_agent_team.ipynb  agent_call_utils.py
adk_tutorial/tools/: __init__.py  get_greetings.py  get_weather.py
app/: __init__.py  cli.py
app/agents/: __init__.py  base.py  v001_minimal.py  v002_research.py  v003_rag.py  v004_deep_planner.py
app/config/: README.md  __init__.py  defaults.yaml  evaluation.yaml  v001.yaml  v002.yaml  v003.yaml  v004.yaml
app/config/evaluation_profiles/: full_with_judge.yaml  quick.yaml
app/config/profiles/: dev.yaml  prod.yaml  test.yaml
app/evaluation/: __init__.py  runner.py
app/orchestration/: __init__.py  blackboard.py  dialogue.py  executor.py  planner.py
app/prompts/agent/: v001.txt  v002.txt  v003.txt  (+1 more)
app/retrieval/: __init__.py
app/scratchfiles/: README.md  test_evaluation_runner.py  test_transformation.py  transform_companies.py
app/tools/: __init__.py  retriever.py  search.py
archive/: minimalist_agent.py  setup_google_adk.py  setup_litellm.py  simple_google_adk.py  test_adk.py  test_auth.py
brisk/: QUICK_START.md  README.md  agents.json  app.py  config.py  demo.py  demo_report.txt  env_example.txt  requirements.txt  run_app.sh  test_search_grounding.py  test_setup.py
data/datasets/: company_qa_eval_100.jsonl  test_transformed_companies.jsonl  transformed_companies_qa.jsonl
(+6 files in other folders)
