[tool.poetry]
name = "adk-tutorial"
version = "0.1.0"
description = "Google ADK Tutorial Project"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-adk = "^1.4.2"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
litellm = "^1.72.9"
google-generativeai = "^0.8.5"
certifi = "^2024.7.4"
mlflow = { version = "^2.22.1", extras = ["genai"] }
pandas = "^2.2.0"
evaluate = "^0.4.3"
transformers = "^4.42.0"
torch = "^2.3.0"
textstat = "^0.7.3"

[tool.poetry.scripts]
transform-companies = "app.scratchfiles.transform_companies:main"
test-transform = "app.scratchfiles.test_transformation:test_transformation"
adk = "app.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.format]
line-ending = "auto"
